Almost finished with section 1. Added button and fixed allignments between texts.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
           </ul>
         </div>
       </div>
+      <div class="main-container">
+        <div class="text-container">
+          <h1 class="main-text">This website is awesome</h1>
+          <p class="small-text">
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast.
+          </p>
+
+          <button type="button">Sign Up</button>
+        </div>
+        <div class="image-1">
+          <p class="image">this is a placeholder for an image</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
