--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
           </p>
 
           <button type="button">Sign Up</button>
-        </div>
-        <div class="image-1">
-          <p class="image">this is a placeholder for an image</p>
+          <div class="image">this is a placeholder for an image</div>
         </div>
       </div>
     </div>
