v3 before trying new div's and margins

--- a/index.html
+++ b/index.html
@@ -19,16 +19,19 @@
           </ul>
         </div>
       </div>
-      <div class="main-container">
-        <div class="text-container">
-          <h1 class="main-text">This website is awesome</h1>
-          <p class="small-text">
+      <div class="hero-container">
+        <div class="hero">
+          <h1>This Website is Awesome</h1>
+          <p>
             This website has some subtext that goes here under the main title.
-            It's a smaller font and the color is lower contrast.
+            It's a smaller font and the color is lower contrast
           </p>
-
-          <button type="button">Sign Up</button>
-          <div class="image">this is a placeholder for an image</div>
+        </div>
+        <div class="button-one">
+          <button class="button" type="button">Sign up</button>
+        </div>
+        <div class="image-container">
+          <p class="placeholder">this is a placeholder for an image</p>
         </div>
       </div>
     </div>
