Finalized the header section and hero text.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="section-one">
       <div class="header">
-        <div class="left-logo">Header Logo</div>
-        <div class="right-logo">
+        <p class="left-header">Header Logo</p>
+        <div class="right-header">
           <ul>
             <li><a href="#">header link one</a></li>
             <li><a href="#">header link two</a></li>
@@ -20,19 +20,15 @@
         </div>
       </div>
       <div class="hero-container">
-        <div class="hero">
-          <h1>This Website is Awesome</h1>
-          <p>
+        <div class="hero-text">
+          <h1>This website is awesome</h1>
+          <p1>
             This website has some subtext that goes here under the main title.
-            It's a smaller font and the color is lower contrast
-          </p>
+            It's a smaller font and the color is alower contrast
+          </p1>
+          <div><button class="button-one" type="button">Sign up</button></div>
         </div>
-        <div class="button-one">
-          <button class="button" type="button">Sign up</button>
-        </div>
-        <div class="image-container">
-          <p class="placeholder">this is a placeholder for an image</p>
-        </div>
+        <div class="placeholder">this is a placholder for an image</div>
       </div>
     </div>
   </body>
