--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <div class="hero-container">
         <div class="hero-text">
           <h1>This website is awesome</h1>
-          <p1>
+          <p>
             This website has some subtext that goes here under the main title.
-            It's a smaller font and the color is alower contrast
-          </p1>
+            It's a smaller font and the color is lower contrast
+          </p>
           <div><button class="button-one" type="button">Sign up</button></div>
         </div>
         <div class="placeholder">this is a placholder for an image</div>
