finished section two, information board

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Nexus Media</title>
+    <title>Landing Page Project</title>
   </head>
   <body>
     <div class="section-one">
@@ -29,6 +29,38 @@
           <div><button class="button-one" type="button">Sign up</button></div>
         </div>
         <div class="placeholder">this is a placholder for an image</div>
+      </div>
+    </div>
+
+    <div class="section-two">
+      <div class="hero-container-two">
+        <h1>Some Random Information.</h1>
+        <div class="box-container">
+          <div class="info-container">
+            <button class="button-two" type="button"></button>
+            <div class="text">
+              this is some subtext under an illustration or image
+            </div>
+          </div>
+          <div class="info-container">
+            <button class="button-two" type="button"></button>
+            <div class="text">
+              this is some subtext under an illustration or image
+            </div>
+          </div>
+          <div class="info-container">
+            <button class="button-two" type="button"></button>
+            <div class="text">
+              this is some subtext under an illustration or image
+            </div>
+          </div>
+          <div class="info-container">
+            <button class="button-two" type="button"></button>
+            <div class="text">
+              this is some subtext under an illustration or image
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
