--- a/index.html
+++ b/index.html
@@ -72,5 +72,17 @@
       </div>
       <div class="author">-Thor, God of Thunder</div>
     </div>
+    <div class="section-four">
+      <div class="action-container">
+        <div class="action-text">
+          <h2>Call to action! It's Time!</h2>
+          <p>
+            Sign up for our prodcut by clicking that button right over there!
+          </p>
+        </div>
+        <button class="button-three" type="button">Sign Up</button>
+      </div>
+    </div>
+    <footer class="footer">Copyright © The Odin Project 2022</footer>
   </body>
 </html>
